--- a/Convolutions_Sidebar.ipynb
+++ b/Convolutions_Sidebar.ipynb
@@ -117,7 +117,7 @@
       },
       "cell_type": "markdown",
       "source": [
-        "Now we can create a filter as a 3x3 array. "
+        "Now we can create a filter as a 3x3 array. Learn more about filters in here : https://lodev.org/cgtutor/filtering.html "
       ]
     },
     {
